--- a/style.css
+++ b/style.css
@@ -16,6 +16,16 @@
     font-weight: bold;
     color: rgb(2, 2, 124);
   }
+  input[type="radio"] {
+      background-color: black;
+      width: 17px;
+      height: 17px;
+  }
+  input[type="checkbox"] {
+    background-color: black;
+    width: 20px;
+    height: 20px;
+    }
   .container {
     display: flex;
     flex-wrap: wrap;
