--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@
   }
   .c1 {
     background-color: #0075a8;
-    color: #fff;
+    color: black;
     padding: 10px 10px 10px 10px;
   }
   .c2 {
