--- a/style.css
+++ b/style.css
@@ -3,9 +3,13 @@
     margin: 0;
     padding: 0;
   }
+  input:checked + label {
+    color: red;
+  }
   html {
     font-size: 62.5%;
   }
+  
   hr {
     width: 195px;
   }
@@ -22,10 +26,12 @@
       height: 17px;
   }
   input[type="checkbox"] {
-    background: red;
+    background: black;
     width: 20px;
     height: 20px;
     }
+ 
+   
   .container {
     display: flex;
     flex-wrap: wrap;
@@ -117,4 +123,5 @@
         width: 34%;
       }
   }
-  
+ 
+ 
