--- a/style.css
+++ b/style.css
@@ -3,13 +3,13 @@
     margin: 0;
     padding: 0;
   }
-  input:checked + label {
-    color: red;
-  }
+ 
   html {
     font-size: 62.5%;
   }
-  
+  input:checked + label {
+    color: black;
+  }
   hr {
     width: 195px;
   }
@@ -35,7 +35,10 @@
   .container {
     display: flex;
     flex-wrap: wrap;
+    background-color: #0075a8;
+    color: blanchedalmond;
   }
+
   .c1,
   .c2,
   .c3,
@@ -46,8 +49,10 @@
     min-width: 15rem;
     height: auto;
     font-size: x-large;
+    padding: 10px;
   }
-  .c1 {
+
+ /*  .c1 {
     background-color: #0075a8;
     color: #fff;
     padding: 10px 10px 10px 10px;
@@ -76,7 +81,8 @@
     background-color: #0075a8;
     color: #fff;
     padding: 10px 10px 10px 10px;
-  }
+  } */
+  
   @media (min-width: 600px) {
     .c1 {
       width: 50%;
