--- a/style.css
+++ b/style.css
@@ -64,7 +64,8 @@
     min-width: 15rem;
     height: auto;
     font-size: x-large;
-    padding: 10px;
+    padding-left: 20px;
+    padding-top: 10px;
   }
 
   @media (min-width: 600px) {
