--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
  
   html {
     font-size: 62.5%;
+    background-color: #0075a8;
   }
   input:checked + label {
     color: black;
@@ -39,7 +40,8 @@
     display: flex;
     flex-wrap: wrap;
     background-color: #0075a8;
-    color: blanchedalmond;
+    color: white;
+    font:bolder;
   }
 
   
