--- a/style.css
+++ b/style.css
@@ -66,7 +66,18 @@
     padding-left: 20px;
     padding-top: 10px;
   }
-
+  @media (max-width: 600px) {
+    .flotante{
+      position: fixed;
+      top: 10px;
+      right: 5px;
+    }
+    .flotanteButton{
+      position: fixed;
+      top: 40px;
+      right: 5px;
+    }
+  }
   @media (min-width: 600px) {
     .c1 {
       width: 50%;
