--- a/style.css
+++ b/style.css
@@ -31,8 +31,8 @@
     width: 75px;
   }
   h4{
-    color: black;
-    background-color: yellow;
+    color: yellow;
+    background-color: black;
     width: 195px;
   }
   button {
