--- a/style.css
+++ b/style.css
@@ -42,6 +42,15 @@
     font-weight: bold;
     color: rgb(0, 0, 0);
   }
+  #boton {
+    text-decoration: none;
+    color: black;
+    background-color: white;
+    padding: 4px;
+    border-radius: 4px;
+    font-weight: 800;
+    margin-top: 5px;
+}
   input[type="radio"] {
       background-color: black;
       width: 17px;
@@ -65,8 +74,17 @@
   #modo {
     color: white;
   }
+  #texto {
+    width: 470px;
+    height: 100px;
+    font: bolder;
+    font-weight: 800;
+}  
+.tituloCopy{
+  background-color: black;
+  color: white;
   
-
+}
 .rvpEspacio{
   position: absolute;
   left: 245px;  
@@ -86,17 +104,17 @@
   .c3,
   .c4,
   .c5,
-  .c6 {
+  .c6,
+  .c7,
+  .c8 {
     width: 100%;
     min-width: 15rem;
     height: auto;
     font-size: x-large;
     padding-left: 20px;
     padding-top: 10px;
-    border: 2px groove white;
-    
-    
-  }
+    border: 2px groove white;  
+      }
   @media (max-width: 600px) {
     .nuevos {
       width: 200px;
@@ -148,6 +166,12 @@
     .c6 {
       order: 6;
       }
+    .c7 {
+      order: 7;
+      } 
+    .c8 {
+      order: 8;
+    }  
   }
   @media (min-width: 600px) {
     .c1 {
@@ -168,6 +192,12 @@
     .c6 {
         width: 100%;
     }
+    .c7 {
+      width: 50%;
+  }
+  .c8 {
+    width: 50%;
+  }
   }
   @media (min-width: 800px) {
     .c1 {
@@ -187,7 +217,13 @@
     }
     .c6 {
         width: 34%;
-      }
+    }
+    .c7 {
+        width: 50%;
+    }    
+    .c8 {
+        width: 50%;
+    }      
   }
  
  
