--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@
     height: 100px;
     font: bolder;
     font-weight: 800;
+    font-size: large;
 }  
 .tituloCopy{
   background-color: black;
