enlaces aplicaciones se agrega cobranzas y extras

--- a/style.css
+++ b/style.css
@@ -56,8 +56,16 @@
     border-radius: 4px;
     font-weight: 800;
     margin-top: 5px;
-    
-}
+  }
+  .enlace {
+    text-decoration: none;
+    color: black;
+    /* background-color: white; */
+    padding: 4px;
+    border-radius: 4px;
+    font-weight: 500;
+    margin-top: 5px;
+  }
   input[type="radio"] {
       background-color: black;
       width: 17px;
