--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     color: black;
   }
 
-  .nuevos {
+   .nuevos {
     width: 175px;
     border-radius: 5px;
   }
@@ -89,6 +89,9 @@
   #modo {
     color: white;
   }
+ 
+
+
   #texto {
     width: 100%;
     height: 100px;
@@ -246,5 +249,7 @@
         width: 50%;
     }      
   }
- 
- 
+  
+  #fac0 {
+    color: red;
+  }
